Archive2/c3/410041116adb3a/output
main.cpp: In function 'int main()':
main.cpp:15:33: error: 'hexToInt' was not declared in this scope
     cout << hexToInt(a,strlen(a));
                                 ^
